--- a/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.scss
+++ b/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.scss
@@ -5,11 +5,6 @@
     font-size: 24px;
 }
 
-.texto {
-    font-size: 20px;
-    color: white;
-}
-
 /*HEADER*/
 .botonRegresar {
     visibility: hidden;
@@ -37,9 +32,7 @@
     transform: translateX(-50%);
 }
 
-
 /*CONTENT*/
-
 .fondo {
     width: 100%;
     height: 100%;
@@ -52,46 +45,68 @@
     }
 }
 
-.tarjeta-pelicula {
-    height: 95%;
-    --background: #0e3155;
-    --offset-bottom: auto!important;
-    --overflow: hidden;
-    overflow: auto;
-    &::-webkit-scrollbar {
-    display: none;
-    }
-}
-
-.imagen-pelicula {
-    --background: #0e3155;
-}
-
-#imagen-pelicula {
+.botones-row {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-}
-
-h3 {
-    color: #FFCD34;
-}
-
-.boton-compra {
-    top: 10px;
-    margin: auto;
+    top: 4px;
+    margin: 5px;
     background-color: #FFCD34;
     border-radius: 15px;
-    width: 200px;
+    width: 150px;
     height: 50px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
     padding: 2px;
 }
 
-.boton-compra p {
+#carrito-img {
     position: relative;
-    top: -10px;
+    top: 4px;
+}
+
+.cartas-comidas {
+    position: relative;
+    left: 50%;
+    transform: translateX(-54%);
+    width: 200px;
+    display: inline-block;
+}
+
+.tarjeta-comida {
+    --background: #0e3155;
+    border-radius: 0px;
+    border: 0px solid black;
+    height: 225px;
+}
+
+#imagen-comida {
+    position: relative;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    height: 225px;
+}
+
+.item-comida{
+    --background: #FFCD34;
+}
+
+.botones-comida{
+    background-color: #FFCD34;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nombre-comida {
+    margin-top: 0px;
+    background-color: #0e3155;
+}
+
+.nombre-comida h4 {
+    margin: 0px;
+    padding: 8px;
+    color: white;
     text-align: center;
 }
