--- a/appcinepolis/src/app/detalles-pelicula/detalles-pelicula.page.html
+++ b/appcinepolis/src/app/detalles-pelicula/detalles-pelicula.page.html
@@ -16,15 +16,23 @@
         <img [src]="pelicula.url" id="imagen-pelicula">
       </ion-item>
       <hr>
-      <div class="info-pelicula">
-        <h3>Título: <span class="texto">{{pelicula.titulo}}</span> </h3>
-        <h3>Director: <span class="texto">{{pelicula.director}}</span></h3>
-        <h3></h3>
-      </div>
-
-
+      <div class="seccion-info">
+        <div class="info-pelicula">
+          <h3>Título: <span class="texto">{{pelicula.titulo}}</span> </h3>
+          <h3>Director: <span class="texto">{{pelicula.director}}</span></h3>
+          <h3 *ngIf="pelicula.actores">Actores: <span *ngFor="let actor of pelicula.actores" class="texto"> {{actor}}</span></h3>
+          <h3>Duración: <span class="texto">{{pelicula.duracion}} minutos</span></h3>
+          <h3>Generos: <span class="texto" *ngFor="let genero of pelicula.generos"> {{genero}}</span></h3>
+          <h3>Idiomas: <span class="texto" *ngFor="let idioma of pelicula.idiomas">{{idioma}} </span></h3>
+          <h3>Edad mínima: <span class="texto">{{pelicula.edad_min}} años</span></h3>
+        </div>
+        <div class="botones-compra">
+          <button class="boton-compra" (click)="comprarEntradas()">
+            <p>Comprar entradas</p>
+          </button>
+        </div>
+    </div>
     </ion-card>
-
 
   </div>
 
