--- a/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.html
+++ b/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.html
@@ -11,24 +11,63 @@
 
   <div class="fondo">
 
+
+    <div class="menu-sin-filtro" *ngIf="!filtro_menu">
+
+      <ion-row class="botones-bar">
+        <button class="botones-row" (click)="filtrar()"> <ion-icon name="filter-outline"></ion-icon> Filtros</button>
+        <button class="botones-row" (click)="carrito()"> <ion-icon name="cart-outline" id="carrito-img"></ion-icon> Carrito</button>
+      </ion-row>
+
+
+    <ion-card *ngFor="let item of comidas" class="cartas-comidas">
+      <ion-item class="tarjeta-comida">
+        <img [src]="item.url" id="imagen-comida">
+      </ion-item>
+      <div class="nombre-comida">
+        <h4>{{item.nombre}}</h4>
+      </div>
+      <ion-item class="item-comida">
+        <button class="botones-comida" (click)="detallesComida(item)">
+          Información
+        </button>
+      </ion-item>
+    </ion-card>
+
+   </div>
+
+
+   <div class="menu-filtro" *ngIf="filtro_menu">
+
     <ion-row class="botones-bar">
-      <button class="botones-row" (click)="carrito()"> <ion-icon name="cart-outline" id="carrito-img"></ion-icon> Carrito</button>
+      <button class="botones-row" (click)="devolverseFiltros()"> <ion-icon name="filter-outline"></ion-icon> Filtros</button>
+      <button class="botones-row" (click)="devolverseFiltros()" id="boton-invisible"> <ion-icon name="filter-outline"></ion-icon> Filtros</button>
     </ion-row>
 
+    <div class="switches-filtraje">
+      <ion-list>
+        <ion-item>
+          <ion-label>Comidas</ion-label>
+          <ion-toggle [(ngModel)]="comidasSwitch" class="switches-filtros"></ion-toggle>
+        </ion-item>
 
-  <ion-card *ngFor="let item of comidas" class="cartas-comidas">
-    <ion-item class="tarjeta-comida">
-      <img [src]="item.url" id="imagen-comida">
-    </ion-item>
-    <div class="nombre-comida">
-      <h4>{{item.nombre}}</h4>
+        <ion-item>
+          <ion-label>Bebidas</ion-label>
+          <ion-toggle [(ngModel)]="bebidasSwitch" class="switches-filtros"></ion-toggle>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Combos</ion-label>
+          <ion-toggle [(ngModel)]="combosSwitch" class="switches-filtros"></ion-toggle>
+        </ion-item>
+      </ion-list>
     </div>
-    <ion-item class="item-comida">
-      <button class="botones-comida" (click)="detallesComida(item)">
-        Información
-      </button>
-    </ion-item>
-  </ion-card>
+
+   </div>
+
+
+
+
   </div>
   
 </ion-content>
