--- a/appcinepolis/src/app/detalles-pelicula/detalles-pelicula.page.html
+++ b/appcinepolis/src/app/detalles-pelicula/detalles-pelicula.page.html
@@ -25,6 +25,8 @@
           <h3>Generos: <span class="texto" *ngFor="let genero of pelicula.generos"> {{genero}}</span></h3>
           <h3>Idiomas: <span class="texto" *ngFor="let idioma of pelicula.idiomas">{{idioma}} </span></h3>
           <h3>Edad mínima: <span class="texto">{{pelicula.edad_min}} años</span></h3>
+          <h3>Sala: <span class="texto">{{pelicula.Sala}}</span></h3>
+          <h3>Hora: <span class="texto">{{pelicula.Hora}}</span></h3>
         </div>
         <div class="botones-compra">
           <button class="boton-compra" (click)="comprarEntradas()">
