--- a/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.html
+++ b/appcinepolis/src/app/alimentos-menu/alimentos-menu.page.html
@@ -16,7 +16,7 @@
 
       <ion-row class="botones-bar">
         <button class="botones-row" (click)="filtrar()"> <ion-icon name="filter-outline"></ion-icon> Filtros</button>
-        <button class="botones-row" (click)="carrito()"> <ion-icon name="cart-outline" id="carrito-img"></ion-icon> Carrito</button>
+        <button class="botones-row" (click)="carrito()" id="carritoAlimentos"> <ion-icon name="cart-outline" id="carrito-img"></ion-icon> Carrito</button>
       </ion-row>
 
 
