--- a/appcinepolis/src/app/carrito/carrito.page.html
+++ b/appcinepolis/src/app/carrito/carrito.page.html
@@ -12,36 +12,61 @@
 
   <div class="fondo">
 
-    <ion-card *ngFor="let item of carritoArrayPeliculas; let i = index" class="cartas-peliculas">
-      <ion-card-content class="texto-tarjeta">
-        <img [src]="item.url" id="imagen-pelicula">
-          <div class="texto-superior">
-            <h4>Película: <span class="texto-descripcion">{{item.nombre}}</span></h4>
-            <h4>Sala: <span class="texto-descripcion">{{item.sala}}</span> </h4>
-            <h4>Hora: <span class="texto-descripcion">{{item.hora}}</span> </h4>
-          </div>
-          <div class="texto-inferior">
-            <h4>Entradas</h4>
-            <P class="texto-descripcion">Niños:   {{item.cantidadNinos}}</P> 
-            <P class="texto-descripcion">Adultos:   {{item.cantidadAdultos}}</P>
-            <P class="texto-descripcion">Adultos Mayores:   {{item.cantidadAdultosMayores}}</P>
-            <div class="detalles">
-              <h4>Num asientos: <span class="texto-descripcion">{{item.numAsientos}}</span></h4>
-              <h4>Total: <span class="texto-descripcion">₡{{item.precioTotal}}</span></h4>
-              <ion-button id="basurero-icon-button" (click)="eliminarItem(i)">
-              <ion-icon name="trash-outline"></ion-icon>
-              </ion-button>
+    <div class="con-items" *ngIf="!itemsFlag">
+
+      <ion-card *ngFor="let item of carritoArrayPeliculas; let i = index" class="cartas-peliculas">
+        <ion-card-content class="texto-tarjeta">
+          <img [src]="item.url" id="imagen-pelicula">
+            <div class="texto-superior">
+              <h4>Película: <span class="texto-descripcion">{{item.nombre}}</span></h4>
+              <h4>Sala: <span class="texto-descripcion">{{item.sala}}</span> </h4>
+              <h4>Hora: <span class="texto-descripcion">{{item.hora}}</span> </h4>
             </div>
+            <div class="texto-inferior">
+              <h4>Entradas</h4>
+              <P class="texto-descripcion">Niños:   {{item.cantidadNinos}}</P> 
+              <P class="texto-descripcion">Adultos:   {{item.cantidadAdultos}}</P>
+              <P class="texto-descripcion">Adultos Mayores:   {{item.cantidadAdultosMayores}}</P>
+              <div class="detalles">
+                <h4>Num asientos: <span class="texto-descripcion">{{item.numAsientos}}</span></h4>
+                <h4>Total: <span class="texto-descripcion">₡{{item.precioTotal}}</span></h4>
+                <ion-button id="basurero-icon-button" (click)="eliminarPelicula(i)">
+                <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
+              </div>
+            </div>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card *ngFor="let item of carritoArrayComidas" class="cartas-comidas">
+        <ion-card-content>
+          <img [src]="item.url" id="imagen-comida">
+          <div class="texto-superior">
+            <h4>Orden: <span class="texto-descripcion">{{item.nombre}}</span></h4>
+            <h4>Cantidad: <span class="texto-descripcion">{{item.cantidad}}</span></h4>
+            <h4>Precio c/u: <span class="texto-descripcion">{{item.precioUnitario}}</span></h4>
+            <h4>Precio Total: <span class="texto-descripcion">{{item.precioTotal}}</span></h4>
+
+            <ion-button id="basurero-icon-button-comida" (click)="eliminarComida(i)">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-button>
           </div>
-      </ion-card-content>
-    </ion-card>
-
-    <ion-row class="botones-bar">
-      <button class="botones-row" (click)="limpiarCarrito()"> <ion-icon name="trash-outline" id="basurero-img"></ion-icon> Limpiar</button>
-      <button class="botones-row" (click)="confirmarCarrito()"> <ion-icon name="checkbox-outline" id="check-img"></ion-icon> Confirmar</button>
-    </ion-row>
 
 
+        </ion-card-content>
+      </ion-card>
+
+
+      <ion-row class="botones-bar">
+        <button class="botones-row" (click)="limpiarCarrito()"> <ion-icon name="trash-outline" id="basurero-img"></ion-icon> Limpiar</button>
+        <button class="botones-row" (click)="confirmarCarrito()"> <ion-icon name="checkbox-outline" id="check-img"></ion-icon> Confirmar</button>
+      </ion-row>
+
+    </div>
+
+    <div class="sin-items" *ngIf="itemsFlag">
+      <h1>No hay items que mostrar</h1>
+    </div>
 
   </div>
 
