--- a/appcinepolis/src/app/carrito/carrito.page.scss
+++ b/appcinepolis/src/app/carrito/carrito.page.scss
@@ -145,3 +145,69 @@
     position: relative;
     top: 4px;
 }
+
+/*CARTAS COMIDAS*/
+
+.cartas-comidas {
+    background-color: #0e3155;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 170px;
+    display:inline-flex;
+    margin-top: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+}
+
+.cartas-comidas h4 {
+    color: #FFCD34;
+    font-size: 20px;
+}
+
+#imagen-comida {
+    width: 102px;
+    height: 150px;
+    position: relative;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    background-color: #0e3155;
+}
+.cartas-comidas .texto-superior {
+    position: relative;
+    left: 110px;
+    top: -160px;
+    margin-top: 3px;
+}
+
+.texto-descripcion{
+    color: white;
+    font-size: 16px;
+}
+
+#basurero-icon-button-comida {
+    position: relative;
+    top: 0px;
+    left: 74px;
+    --background: #df00006b;
+    --ripple-color: #df0000;
+}
+
+#basurero-icon-button-comida:hover{
+    --background: #df0000;
+}
+
+/*SIN ITEMS*/
+
+.sin-items {
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+}
