--- a/appcinepolis/src/app/register/register.page.html
+++ b/appcinepolis/src/app/register/register.page.html
@@ -15,16 +15,12 @@
     </form>
 
     <div class="botones">
-      <button class="button-volver">
-        <a href="/home">
+      <button class="button-volver" (click)="regresar()">
           <p>Volver</p>
-        </a>
       </button>
   
       <button class="button-registrar" (click)="registrar()">
-        <a href="#">
           <p>Registrar</p>
-        </a>
       </button>
     </div>  
 
