Modulo-admin completo
se completó el modulo admin. Solo falta el pdf del carrito

--- a/appcinepolis/src/app/alimentos-menu-admin/alimentos-menu-admin.page.html
+++ b/appcinepolis/src/app/alimentos-menu-admin/alimentos-menu-admin.page.html
@@ -3,7 +3,7 @@
     <button class="botonRegresar" (click)="regresar()">
       <ion-icon name="chevron-back-outline" id="flechaRegreso"></ion-icon>
     </button>
-    <ion-title id="tituloPagina">Menú Principal</ion-title>
+    <ion-title id="tituloPagina">Menú Alimentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
